updates related to session handling
